--- a/app/globals.css
+++ b/app/globals.css
@@ -3,24 +3,22 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-poppins: var(--font-poppins);
+  --font-press-start-2p: var(--font-press-start-2p);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins), Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  font-family: var(--font-press-start-2p), monospace !important;
+}
+h2 {
+  font-family: var(--font-press-start-2p), monospace !important;
+  font-size: 2rem;
+  line-height: 1.2;
 }
